fix(slash): jump to the top or bottom when using the up or down key to change current item

--- a/src/plugins/slash/slash-menu.css
+++ b/src/plugins/slash/slash-menu.css
@@ -1,5 +1,8 @@
 .lake-slash-menu {
-  max-height: 330px;
+  max-height: 332px;
+}
+.lake-slash-menu .lake-menu-item {
+  height: 54px;
 }
 .lake-slash-menu .lake-menu-item input[type="file"] {
   display: none;
